springboot-deployment-ecr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  labels:
    app: springboot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: 400150977086.dkr.ecr.ap-south-1.amazonaws.com/springboot:18
        ports:
        - containerPort: 8080
