springboot-service-acr.yaml
kind: Service
apiVersion: v1
metadata:
  name: springboot-service
spec:
  type: LoadBalancer
  selector:
    app: springboot
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
