gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # Use the default Istio gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
