virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  gateways:
    - my-gateway
  http:
    - route:
        - destination:
            host: springboot-service
            port:
              number: 8080
